# EKS-Scaler

./: .gitignore  README.md  cargo.toml  package-lock.json
.moon/: toolchain.yml  workspace.yml
apps/ec2/: Cargo.toml  README.md  moon.yml
apps/ec2/src/: http_handler.rs
apps/eks-manager-list-all-clusters-lambda/: Cargo.toml  README.md
apps/eks-manager-list-all-clusters-lambda/src/: http_handler.rs
apps/eks-manager-set-cpu-karpenter-lambda/: Cargo.toml  Dockerfile  kubeconfig.yaml  moon.yml
apps/eks-manager-set-cpu-karpenter-lambda/src/: http_handler.rs  test.yml
apps/eks-manager-set-cpu-karpenter-lambda/src/config/: config_generator.rs  mod.rs
apps/eks-set-cpu/: README.md  moon.yml  samconfig.toml  template.yaml
apps/eks-set-cpu/.aws-sam/: build.toml
apps/eks-set-cpu/events/: apigateway_event.json
apps/eks-set-cpu/set-karpenter-cpu/: app.py
apps/eks-terminate-ec2/: Cargo.toml  moon.yml
apps/eks-terminate-ec2/src/: http_handler.rs
apps/event-scheduler/: Cargo.toml
apps/event-scheduler/src/: date_handler.rs  http_handler.rs
apps/karpenter/: moon.yml  samconfig.toml  template.yaml
apps/karpenter/.aws-sam/: build.toml
apps/karpenter/set-karpenter-cpu/: app.py  requirements.txt
apps/list-clusters/: Cargo.toml  moon.yml
apps/scheduler/: Cargo.toml  README.md  moon.yml
apps/scheduler/src/: date_handler.rs  http_handler.rs  main.rs
apps/web-client/: moon.yml  package-lock.json  package.json  sst-env.d.ts  sst.config.ts
apps/web-client/src/app/: layout.tsx  page.tsx
apps/web-client/src/app/api/ec2-lambda/: route.ts
apps/web-client/src/app/api/karpenter-lambda/: route.ts
apps/web-client/src/app/api/save-schedule/: route.ts
apps/web-client/src/app/components/: container.tsx  row.tsx
