[package]
name = "eks-manager-list-all-clusters-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"

tokio = { version = "1", features = ["macros"] }

aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }

aws-sdk-eks = "1.66.0"

serde_json = "1.0.135"

[deploy]
memory = 64