[package]
name = "eks-manager-set-cpu-karpenter-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
aws-config = "1.5.13"
aws-sdk-eks = "1.65.0"
aws-sdk-sts = "1.54.0"
aws-types = "1.3.3"
tokio = { version = "1.43.0", features = ["full"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
reqwest = { version = "0.12.12", features = ["json"] }
anyhow = "1.0.95"
tracing = "0.1.41"
openssl = { version = "0.10.35", features = ["vendored"] }
secrecy = "0.10.3"
serde_yaml = "0.9.34"
serde = "1.0.217"
