[package]
name = "eks-terminate-ec2"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.14.0"
aws-config = "1.5.14"
aws-sdk-ec2 = "1.102.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.135"

[package.metadata.lambda.deploy]
memory = 128                    # Function's memory
timeout = 60                    # Function's execution timeout
tracing = "active"              # Tracing mode
role = "arn:aws:iam::935103045726:role/lambda_execution_role"          # Function's execution role
tags = { "project" = "eks-scaler" }    # List of AWS resource tags for this function
