[package]
name = "event-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-dynamodb = "1.60.0"
lambda_http = "0.14.0"
aws-config = { version = "1.5.14", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["macros"] }
serde = "1.0.217"
chrono = "0.4.39"
tracing = "0.1.41"
anyhow = "1.0.95"
reqwest = "0.12.12"
